.provarCaches/00D410000011HE0EAM/objects/rstkf__glaydiv__c.object
<CustomObject>
    <description>glaydiv__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glaydiv_glay__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; rstkf__glaydiv_gldiv__r.rstkf__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_glay__c</fullName>
        <label>glay</label>
        <referenceTo>rstkf__glay__c</referenceTo>
        <relationshipLabel>glaydivs</relationshipLabel>
        <relationshipName>glaydivs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_gldiv__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Financial Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>glaydivs</relationshipLabel>
        <relationshipName>glaydivs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_mp00cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period00 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_mp00dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period00 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_mp01cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period01 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_mp01dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period01 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_mp02cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period02 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_mp02dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Period02 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_p00cr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Z_Obsolete_Period00 Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_p00dr__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Z_Obsolete_Period00 Debit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_p00net__c</fullName>
        <formula>rstkf__glaydiv_mp00dr__c - rstkf__glaydiv_mp00cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period00 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_p01cr__c</fullName>
        <label>Z_Obsolete_Period01 Credit</label>
        <summarizedField>rstkf__glayproj__c.rstkf__glayproj_p01cr__c</summarizedField>
        <summaryForeignKey>rstkf__glayproj__c.rstkf__glayproj_glaydiv__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_p01dr__c</fullName>
        <label>Z_Obsolete_Period01 Debit</label>
        <summarizedField>rstkf__glayproj__c.rstkf__glayproj_p01dr__c</summarizedField>
        <summaryForeignKey>rstkf__glayproj__c.rstkf__glayproj_glaydiv__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_p01net__c</fullName>
        <formula>rstkf__glaydiv_mp01dr__c - rstkf__glaydiv_mp01cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period01 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_p02cr__c</fullName>
        <label>Z_Obsolete_Period02 Credit</label>
        <summarizedField>rstkf__glayproj__c.rstkf__glayproj_p02cr__c</summarizedField>
        <summaryForeignKey>rstkf__glayproj__c.rstkf__glayproj_glaydiv__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_p02dr__c</fullName>
        <label>Z_Obsolete_Period02 Debit</label>
        <summarizedField>rstkf__glayproj__c.rstkf__glayproj_p02dr__c</summarizedField>
        <summaryForeignKey>rstkf__glayproj__c.rstkf__glayproj_glaydiv__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstkf__glaydiv_p02net__c</fullName>
        <formula>rstkf__glaydiv_mp02dr__c - rstkf__glaydiv_mp02cr__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period02 Net</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>glaydiv</label>
    <listViews>
        <fullName>rstkf__RS_GLADIV</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstkf__glaydiv_p00net__c</columns>
        <columns>rstkf__glaydiv_p01net__c</columns>
        <columns>rstkf__glaydiv_p02net__c</columns>
        <columns>rstkf__glaydiv_p03net__c</columns>
        <columns>rstkf__glaydiv_p04net__c</columns>
        <columns>rstkf__glaydiv_p05net__c</columns>
        <columns>rstkf__glaydiv_p06net__c</columns>
        <columns>rstkf__glaydiv_p07net__c</columns>
        <columns>rstkf__glaydiv_p08net__c</columns>
        <columns>rstkf__glaydiv_p09net__c</columns>
        <columns>rstkf__glaydiv_p10net__c</columns>
        <columns>rstkf__glaydiv_p11net__c</columns>
        <columns>rstkf__glaydiv_p12net__c</columns>
        <filterScope>Everything</filterScope>
        <label>GLADIV</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>glaydivs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>